2007-03-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	* flumotion/test/test_feedcomponent010.py:
	  Set the keys we know we support to 0, the others to None.
	  Update the test for it.

2007-03-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/admin_gtk.py:
	* flumotion/component/feedcomponent010.py:
	  Use None for uiState values to indicate "component has no support
	  for reporting this" so we can show "Unknown" in the UI

2007-03-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/Makefile.am:
	* conf/examples/twores.xml:
	  Add an example of streaming and recording at different resolutions.

2007-03-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	  Don't traceback with older plugins base for the uiState
	  calculations.

2007-03-05  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/common.py (daemonizeHelper._deletePidFile): Fix
	very broken deletePidFile.

	* flumotion.spec.in (BuildRequires): Require python-twisted-web
	and -names.

2007-03-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/admin_gtk.py:
	* flumotion/component/base/feeders.glade:
	* flumotion/component/feedcomponent010.py:
	  Also show when the last buffer was read, to debug longer
	  connection problems.

2007-03-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	  Move fd out of the constructor for FeederClient, since it
	  is something that can change or be None during its lifetime.
	  Make sure we actually set .fd as well to be correct.
	  get-client-stats can return a 0-length array if the fd is invalid,
	  so warn better when that happens.

2007-03-02  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/base/admin_gtk.py: 
	Added more comments and changed a class variable name
	to make it less ambiguous.
